--- a/ProgressbarWithSignalR/Views/Home/Index.cshtml
+++ b/ProgressbarWithSignalR/Views/Home/Index.cshtml
@@ -2,18 +2,25 @@
     ViewBag.Title = "Home Page";
 }
 
-<div class="container">
+<div class="container py-3">
     <div class="row">
-        <div class="col-md-4 col-12">
+        <div class="col-md-6">
             <form action="/Home/Upload" method="post" enctype="multipart/form-data">
                 @Html.AntiForgeryToken()
-
                 <div class="custom-file">
                     <input type="file" name="file" class="custom-file-input" id="customFile">
                     <label class="custom-file-label" for="customFile">選擇檔案</label>
                 </div>
-                <input type="submit" name="name" value="上傳" />
+                <input type="submit" name="name" value="上傳" class="btn btn-primary my-2" />
             </form>
+        </div>
+    </div>
+
+    <div class="row mt-3">
+        <div class="col-12">
+            <div class="progress" style="height: 20px;">
+                <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" style="width: 25%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">25%</div>
+            </div>
         </div>
     </div>
 </div>
