--- a/ProgressbarWithSignalR/Views/Home/Index.cshtml
+++ b/ProgressbarWithSignalR/Views/Home/Index.cshtml
@@ -5,22 +5,60 @@
 <div class="container py-3">
     <div class="row">
         <div class="col-md-6">
-            <form action="/Home/Upload" method="post" enctype="multipart/form-data">
+            @using (Ajax.BeginForm("Upload", "Home", new AjaxOptions { HttpMethod = "Post", OnSuccess = "ShowResult" }, new { enctype = "multipart/form-data" }))
+            {
                 @Html.AntiForgeryToken()
                 <div class="custom-file">
                     <input type="file" name="file" class="custom-file-input" id="customFile">
                     <label class="custom-file-label" for="customFile">選擇檔案</label>
                 </div>
                 <input type="submit" name="name" value="上傳" class="btn btn-primary my-2" />
-            </form>
+            }
         </div>
     </div>
 
     <div class="row mt-3">
         <div class="col-12">
             <div class="progress" style="height: 20px;">
-                <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" style="width: 25%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">25%</div>
+                <div id="bar" class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" style="width: 0%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">0%</div>
             </div>
         </div>
     </div>
 </div>
+
+@section scripts{
+    <script src="~/Scripts/jquery.signalR-2.4.1.min.js"></script>
+    <script src="~/signalr/hubs"></script>
+
+    <script>
+
+        $('input[type="file"]').change(function (e) {
+            var fileName = e.target.files[0].name;
+            e.target.nextElementSibling.textContent = fileName;
+        })
+
+        $(function () {
+            var progressHub = $.connection.progressHub;
+
+            progressHub.client.addprogress = function (progress) {
+                if (progress != 100) {
+                    $("#bar").css("width", progress + "%");
+                    $("#bar").val(progress + "%");
+                } else {
+                    $.connection.hub.stop();
+                }
+            }
+
+            $.connection.hub.start().done(function () {
+                $("#uploadform").submit(function () {
+                    progressHub.server.currentProgress();
+                })
+            })
+        })
+
+        function ShowResult(response) {
+            alert(response.responseText);
+        }
+    </script>
+
+}
